# dagster-playground

./: .gitignore  README.md  pyproject.toml
.tmp_dagster_home__q5rf380/history/: runs.db
.tmp_dagster_home__q5rf380/history/runs/: 7a7c6bcc-b7e0-4821-bf1d-94eb16e38497.db  index.db
.tmp_dagster_home__q5rf380/schedules/: schedules.db
.tmp_dagster_home__q5rf380/storage/: processed_data
.tmp_dagster_home__q5rf380/storage/7a7c6bcc-b7e0-4821-bf1d-94eb16e38497/compute_logs/: goysnokt.err
src/dagster_pg/defs/: assets.py
src/dagster_pg/defs/data/: agents.txt  processed_data2.csv  sample_data.csv
